dynamix/force-app/main/default/objects/Broker_Payment__c/Broker_Payment__c.object-meta.xml
<CustomObject>
    <label>Broker Payment</label>
    <nameField>
        <label>Broker Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>