dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Advanced_Settled_currency__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Settled_currency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advanced Settled currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>