dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Broker_Payment_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Payment_Owner_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <label>Broker Payment Owner Email</label>
    <type>Text</type>
</CustomField>