dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Payment</relationshipLabel>
    <relationshipName>Broker_Payment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>