dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <formula>Channel_Partner__r.Name</formula>
    <label>Channel Partner Name</label>
    <type>Text</type>
</CustomField>