dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Final_amount__c.field-meta.xml
<CustomField>
    <fullName>Final_amount__c</fullName>
    <formula>Amount__c -  Advanced_Settled_currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>