dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Invoice_no__c.field-meta.xml
<CustomField>
    <fullName>Invoice_no__c</fullName>
    <label>Invoice no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>