dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Picklist_Payment_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Payment_Cleared__c</fullName>
    <label>Payment Cleared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>F&amp;F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>