dynamix/force-app/main/default/objects/Broker_Payment__c/fields/Reason_for_Delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Delay__c</fullName>
    <label>Reason for Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>